# algoritmia-2025-2

Algoritmia/reso labs/24_2/: funciones.cpp  funciones.h
Algoritmia/reso labs/bruta 25_1/: CMakeLists.txt  main.cpp
Algoritmia/reso labs/bruta 25_1 2/: CMakeLists.txt  main.cpp
Algoritmia/reso labs/lab24_2/: CMakeLists.txt
Algoritmia/reso labs/mochilita/: CMakeLists.txt  main.cpp
Algoritmia/reso labs/recu 24_2/: CMakeLists.txt  funciones.cpp  main.cpp
Algoritmia/reso labs/recu 25_1/: funciones.cpp
Algoritmia/reso labs/recursion_clase/: CMakeLists.txt  funciones.cpp  funciones.h
ImplementacionesTADs/ListaSimplementeEnlazada/: main.cpp
ImplementacionesTADs/ListaSimplementeEnlazada/BibliotecaLista/: funcionesLista.cpp
Resoluciones Evaluaciones/20226104_LAB1_P1(25_2)/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/20226104_LAB1_P2(25_2)/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/20226104_LAB2_P1(25_2)/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/20226104_LAB2_P1(25_2)/BibliotecaLista/: ElementoLista.h  funcionesLista.cpp
Resoluciones Evaluaciones/20226104_LAB2_P2(25_2)/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/bruta exa 25_1/: main.cpp
Resoluciones Evaluaciones/cola exa 24_2/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/cola exa 24_2/BibliotecaCola/: Cola.h  ElementoCola.h  funcionesCola.cpp
Resoluciones Evaluaciones/cola exa 25_1/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/cola exa 25_1/BibliotecaCola/: ElementoCola.h  funcionesCola.cpp
Resoluciones Evaluaciones/listas exa 22_2/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/listas exa 22_2/BibliotecaLista/: ElementoLista.h  funcionesLista.cpp
Resoluciones Evaluaciones/listas exa 25_1/: CMakeLists.txt  ElementoLista.h  Lista.h  NodoLista.h  funcionesLista.cpp  funcionesLista.h  main.cpp
Resoluciones Evaluaciones/listas lab 25_1/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/listas lab 25_1/BibliotecaLista/: funcionesLista.h
Resoluciones Evaluaciones/pila 25_1/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/pila 25_1/BibliotecaPila/: ElementoPila.h
Resoluciones Evaluaciones/pila exa 24_2/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/pila exa 25_1/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/pilas 24_1 exa/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/pilas exa 22_2/: CMakeLists.txt  main.cpp
Resoluciones Evaluaciones/pintapixel/: CMakeLists.txt
Resoluciones Evaluaciones/recu 24_2/: funciones.cpp  funciones.h
Resoluciones Evaluaciones/recu 25_1/: CMakeLists.txt  funciones.h
Resoluciones Evaluaciones/recu exa 25_1/: CMakeLists.txt  main.cpp
Resoluciones Laboratorios/bruta exa 25_1/: CMakeLists.txt
Resoluciones Laboratorios/lab 24_1/: CMakeLists.txt
Resoluciones Laboratorios/pintapixel/: main.cpp
Resoluciones Laboratorios/recu 24_1/: main.cpp
Resoluciones Laboratorios/recu 25_1/: main.cpp
Resoluciones Laboratorios/recursion_clase/: main.cpp
