cmake_minimum_required(VERSION 4.0)
project(20226104_LAB2_P2_25_2_)

set(CMAKE_CXX_STANDARD 20)

add_executable(20226104_LAB2_P2_25_2_ main.cpp
        BibliotecaPila/Pila.h
        BibliotecaPila/funcionesPila.cpp
        BibliotecaPila/funcionesPila.h
        BibliotecaPila/NodoPila.h
        BibliotecaPila/ElementoPila.h)
